21. fixed nav overflow issues

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body{
     background: #000000;
     color: rgb(255, 255, 255);
     position: relative;
-    z-index: 10000;
 }
 
 
@@ -44,6 +43,7 @@ body{
 /*padding for nav bar*/
 .container{
     padding: 10px 10%;
+    z-index: 9999 !important;
 }
 
 /*nav bar layout - center items*/
@@ -53,6 +53,11 @@ nav{
     justify-content: space-between;
     flex-wrap: wrap;
     position: fixed;
+    background-color: #000000;
+    width: 100%;
+    margin-top: -10px;
+    margin-left: -150px;
+    z-index: 9999 !important;
 }
 
 /*nav bar title*/
@@ -61,16 +66,20 @@ nav a{
     font-weight: 800;
     font-size: 80px;
     margin-right: 50px;
+    margin-left: 25px;
+    z-index: 9999 !important;
 }
 
 /*colour of the contents inside span of title 'AIDAN' - changes 'D' to red*/
 nav a span{
     color: #921313;
+    z-index: 9999 !important;
 }
 
 /*set size of logo*/
 .logo{
     width: 140px;
+    z-index: 9999 !important;
 }
 
 /*Nav bar items layout horizontal*/ 
@@ -78,6 +87,7 @@ nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 40px;
+    z-index: 9999 !important;
 }
 
 /*Nav bar item text design*/
@@ -88,17 +98,10 @@ nav ul li a{
     font-weight: 300;
     position: relative;
     align-items: center;
+    z-index: 9999 !important;
 }
 
-/*Dowload CV button*/
-nav ul a{
-    color: #fff;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 300;
-    position: relative;
-    align-items: right;
-}
+
 
 /*effect of hovering over items in nav bar will give moving underline*/
 nav ul li a::after{
@@ -110,17 +113,20 @@ nav ul li a::after{
     left: 0;
     bottom: -6px;
     transition: 0.5s;
+    z-index: 9999 !important;
 }
 
 /*determine how much of the content will be underlined - 
 100% means underline will go all the way to the end of the text*/
 nav ul li a:hover::after{
     width: 100%;
+    z-index: 9999 !important;
 }
 
 .sticky {
     position: sticky;
     top: 0;
+    z-index: 9999 !important;
   }
 
 
@@ -144,19 +150,21 @@ nav ul li a:hover::after{
     font-size: 100px;
     font-weight: 600;
 
+
+    /*Typewriter effect------*/
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .05em solid rgb(255, 255, 255); /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 50; /* Gives that scrolling effect as the typing happens */
     animation: 
-      typing 2.5s steps(30) 1s 1 normal both,
-      blink-caret .75s steps(30) infinite;
+      typing 1.5s steps(30) 1s 1 normal both,
+      blink-caret 0.75s steps(30) infinite;
 }
 
 /* The typing effect */
 @keyframes typing {
     from { width: 0 }
-    to { width: 51% }
+    to { width: 52% }
   }
   
   /* The typewriter cursor effect */
@@ -164,6 +172,7 @@ nav ul li a:hover::after{
     from, to { border-color: transparent }
     40% { border-color: rgb(255, 255, 255); }
   }
+/*Typewriter effect------*/
 
 
 .header-text h1 span{
@@ -646,7 +655,6 @@ the transition line came later and gives the rising effect of the info section*/
 /*----------------------------------------------*/
 .contact-left p a i:before {
     position: absolute;
-    z-index: 9998;
     width: 0;
     height: 0;
     border-left: 5px solid transparent;
@@ -658,7 +666,6 @@ the transition line came later and gives the rising effect of the info section*/
     content: "Copy to Clipboard";
     display: none;
     position: absolute;
-    z-index: 9999;
     top: -10px;
     left: 30px;
     width: 130px;
@@ -703,9 +710,6 @@ the transition line came later and gives the rising effect of the info section*/
 
 
 
-
-
-  
 
 /*----------------------------------------------*/
 
@@ -767,10 +771,10 @@ form input, form textarea{
 }
 
 
-form btn2{
-    padding-top:0px;
+form .btn2{
+    padding-top:10px;
     font-size: 18px;
-    margin-top: 0px;
+    margin-top: 10px;
     cursor: pointer;
 }
 
@@ -852,7 +856,7 @@ nav .fa-solid{
         width: 200px;
         height: 120vh;
         padding-top: 50px;
-        z-index: 2;
+        z-index: 9999;
         transition: right 0.5s;
     }
 
